# clip-stash

./: Cargo.toml  data.db
migrations/: 20251227083248_create_clips_table.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/clip/field/: hits.rs  password.rs  posted.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs
