[package]
name = "clip_stash"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
rand = "0.9.2"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
] }


[lib]
name = "clip_stash"
path = "src/lib/mod.rs"
